modified navbar and CSS

--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -4,34 +4,24 @@
      <head>
         <title>Review an Item</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
+        <!--navbar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="navbar">
             <div class="container">
                 <div class="row">
-                       <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                             <a href="/" class="navbar-link">Home</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="about" class="navbar-link">About</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="CreateReview" class="navbar-link">Review An Item</a>
-                        </p>
-                    </div>
+                    <p class="navbar-text navbar-left">
+                        <a href="/" class="navbar-link">Home</a>
+                    </p>
+                    <p class="navbar-text navbar-left">
+                        <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
+                    </p>
+                    <p class="navbar-text navbar-left">
+                        <a href="CreateReview" class="navbar-link">Review A New Item</a>
+                    </p>
                 </div>
             </div>
         </nav>
@@ -68,16 +58,9 @@
                         <input type="radio" name="rating" value="e" checked><label for="e"><img src="photos/happy4.png" class="img-circle"></label>
                         <input type="radio" name="rating" value="f" checked><label for="f"><img src="photos/happy2.png" class="img-circle"></label>
                     </div>
-                    <br>
-                    <br>
                     <div class="col-md text-center">
                         <input type="Submit" value="Create New Review">
                     </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
                 </form>
             </div>
         </div>
