--- a/views/index.erb
+++ b/views/index.erb
@@ -6,33 +6,22 @@
     <head>
         <title>home</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
 
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="navbar">
             <div class="container">
                 <div class="row">
-                       <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                             <a href="/" class="navbar-link">Home</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="about" class="navbar-link">About</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <p class="navbar-text navbar-left">
-                            <a href="CreateReview" class="navbar-link">Review A New Item</a>
-                        </p>
-                    </div>
+                    <p class="navbar-text navbar-left">
+                        <a href="/" class="navbar-link">Home</a>
+                    </p>
+                    <p class="navbar-text navbar-left">
+                        <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
+                    </p>
+                    <p class="navbar-text navbar-left">
+                        <a href="CreateReview" class="navbar-link">Review A New Item</a>
+                    </p>
                 </div>
             </div>
         </nav>
@@ -42,8 +31,6 @@
                     <h1>Welcome to Recent Reviews!</h1>
                 </div>  
             </div>
-            <br>
-            <br>
             <div class="row">
                 <div class="col-md text-center">
                     <img src="photos/happy5.png" class="img-circle">
@@ -56,9 +43,6 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <br>
-                    <br>
-                    <br>
                     <h3>"Everything was beautiful and nothing hurt"</h3>
                     <h3>Review anything you want!</h3>
                     <div class="btn-group" role="group" id="button1">
@@ -82,9 +66,6 @@
                             </button>
                         </a>
                     </div>
-                    <br>
-                    <br>
-                    <br>
                 </div>
             </div>
         </div>
