adjusted distance between h1 label and products

--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -28,10 +28,8 @@
 
         <div class="container">
             <div class="row">
-                <h1 id="existing">Recent Reviews</h1>
+                <h1 class="review_label" id="existing">Recent Reviews</h1>
             </div>
-            <br>
-            <br>
             <div class="row">
 
                 <div class="col-md" id="view">
@@ -40,7 +38,7 @@
 
                     <p>Search And View Our Reviews Here!</p>
                     <form class="input" action="/UpdateReview" method="POST">
-                        <input type="text" name="name">
+                        <input type="text" name="searchName">
                         <input type="submit" value="View Item">
                     </form>
 
