--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -72,9 +72,11 @@
                                 <%=@product.face6%>
                             </div>
                             <div class="row">
-                                <form class="input" action="AddReview" method="POST">
-                                    <input type="submit" value="Review This Item" id="updateButton">
-                                </form>
+                                <a href="CreateReview">
+                                    <button class="btn btn-default">
+                                        <h3>Review this item</h3>
+                                    </button>
+                                </a>
                             </div>  
                         <%end%>
                     </h2>
