--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--created November 30, 2014 by Christian Seremetis and Daniel Greenberg-->
+<!--created November 30, 2014 by Christian Seremetis-->
 
 <html>
     <head>
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <h3>"Everything was beautiful and nothing hurt"</h3>
+                    <h3>"Hope is a superpower"</h3>
                     <h3>Review anything you want!</h3>
                     <div class="btn-group" role="group" id="button1">
                         <a href="ExistingReviews">
